# twat-genai

./: .cursorrules  .gitignore  CHANGELOG.md  CHANGES.md  CLEANUP.txt  CONTRIBUTING.md  INSTALLATION.md  LOG.md  PLAN.md  README.md  REPO_CONTENT.txt  TODO.md  llms.txt  pyproject.toml  test_outpaint.py
.cursor/rules/: filetree.mdc  image-generation-pipeline.mdc  image-transformation-algorithms.mdc  lora-integration.mdc  prompt-processing-system.mdc
.giga/: specifications.json
.github/workflows/: ci.yml  push.yml  release.yml
.idx/: dev.nix
scripts/: build.sh  release.sh  test.sh
src/twat_genai/: __init__.py  __main__.py  __main___loras.json  cli.py
src/twat_genai/core/: __init__.py  config.py  image.py  image_utils.py  lora.py  models.py  prompt.py
src/twat_genai/engines/: __init__.py  base.py
src/twat_genai/engines/fal/: __init__.py  client.py  config.py  lora.py  models.py  outpaint.py  upscale.py
tests/: conftest.py  test_cli.py  test_fal_client.py  test_image_utils.py  test_integration.py  test_package.py  test_version.py
