[build-system]
requires = [
    "hatchling>=1.21.0",
    "hatch-vcs>=0.3.0",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/twat_genai"]

[project]
name = "twat-genai"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.10.999"
license = "MIT"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    "twat",
    "pydantic>=2.0.0",
]


[[project.authors]]
name = "Adam Twardoch"
email = "adam+github@twardoch.com"


[project.urls]
Documentation = "https://github.com/twardoch/twat-genai#readme"
Issues = "https://github.com/twardoch/twat-genai/issues"
Source = "https://github.com/twardoch/twat-genai"


[project.entry-points."twat.plugins"]
genai = "twat_genai"


[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "post-release"

[tool.hatch.build.hooks.vcs]
version-file = "src/twat_genai/__version__.py"



[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]


[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/twat_genai --cov=tests {args:tests}"
type-check = "mypy src/twat_genai tests"
lint = ["ruff check src/twat_genai tests", "ruff format src/twat_genai tests"]


[[tool.hatch.envs.all.matrix]]
python = ["3.10"]


[tool.hatch.envs.lint]
detached = true
dependencies = [
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]


[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/twat_genai tests}"
style = ["ruff check {args:.}", "ruff format {args:.}"]
fmt = ["ruff format {args:.}", "ruff check --fix {args:.}"]
all = ["style", "typing"]


[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "PLR0913",  # Too many arguments to function call
    "ISC001",   # Implicit string concatenation
]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true


[tool.coverage.run]
source_pkgs = ["twat_genai", "tests"]
branch = true
parallel = true
omit = [
    "src/twat_genai/__about__.py",
]


[tool.coverage.paths]
twat_genai = ["src/twat_genai", "*/twat-genai/src/twat_genai"]
tests = ["tests", "*/twat-genai/tests"]


[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
] 